--- a/detalles.html
+++ b/detalles.html
@@ -25,7 +25,8 @@
 
 <br><img src="descarga.jpg">
 <hr>
-<img src="descarga.jpg" alt="" width="200" height="300">
+<img src="descarga.jpg" alt="" width="300" height="300" style="border-radius: 300px;">
+
 </center>
 
 
