--- a/detalles.html
+++ b/detalles.html
@@ -20,14 +20,15 @@
 <br>
 
 <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, non? Deleniti, rem totam, in odio blanditiis dolores vero aut, id hic porro doloribus ipsa ea! Amet optio officia a rerum?
-
+</center>
 <hr>
 
-<br><img src="descarga.jpg">
+<br>
+<img src="descarga.jpg">
 <hr>
 <img src="descarga.jpg" alt="" width="300" height="300" style="border-radius: 300px;">
-
-</center>
+<img src="descarga.jpg" alt="" width="300" height="300" style="border-radius: 300px;">
+<img src="descarga.jpg" alt="" width="300" height="300" style="border-radius: 300px;">
 
 
 
